# multi-agent-kernel

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  PLANS.md  README.md  RISK_ASSESSMENT.md  TASKS.md  documentation.txt  pyproject.toml
.github/workflows/: ci.yml
benchmark/: .gitignore  README.md  STATS.md  run_benchmark.py
benchmark/harness/: __init__.py  accuracy.py  agents.py  mak_runner.py  metrics.py  report.py  template2_spec.py  traditional.py  workload.py
benchmark/project_template/: conftest.py
benchmark/project_template/tests/: test_operations.py  test_registry.py
benchmark/project_template/toolkit/: __init__.py  numbers.py  registry.py  sequences.py  strings.py
benchmark/project_template_2/: conftest.py
benchmark/project_template_2/tests/: test_operations.py  test_registry.py
benchmark/project_template_2/toolkit/: __init__.py  codekit.py  datekit.py  dictkit.py  mathkit.py  numkit.py  parsekit.py  registry.py  seqkit.py  setkit.py  strkit.py
benchmark/tools/: gen_template2.py
cli/: __init__.py  __main__.py  app.py  commands.py  completer.py  runner.py  setup.py  ui.py
cli/core/: __init__.py  api_keys.py  models.py  state.py
demo/: README.md  config.yaml
demo/project/: conftest.py
demo/project/dataforge/: __init__.py  numbers.py  sequences.py  strings.py
demo/project/tests/: test_numbers.py  test_sequences.py  test_strings.py
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
mak/: .env.example  __init__.py  __main__.py  _version.py  bootstrap.py  config.py  config.yaml  session.py
mak/agent_runner/: __init__.py  protocol.py  registry.py  runner.py  sandbox.py
mak/agent_runner/adapters/: __init__.py  anthropic_api_adapter.py  base_adapter.py  claude_code_adapter.py  cli_adapter.py  codex_adapter.py  copilot_adapter.py  gemini_api_adapter.py  openai_api_adapter.py
mak/conflict_detector/: __init__.py  detector.py  import_check.py  name_collision_check.py  signature_check.py
mak/core/: __init__.py  exceptions.py  logging.py  types.py
mak/git_integration/: __init__.py  git.py
mak/lock_manager/: __init__.py  conflicts.py  deadlock_detector.py  lock_table.py  rwlock.py
mak/node_store/: __init__.py  ingestion.py  reconstruction.py  store.py
mak/planner/: __init__.py  llm.py  planner.py  review.py
mak/scheduler/: __init__.py  dag.py  scheduler.py
multi_agent_kernel.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: __init__.py  test_bootstrap.py  test_concurrency_integration.py  test_config.py  test_config_validation.py  test_integration.py  test_main.py  test_session.py
tests/agent_runner/: __init__.py  test_anthropic_api_adapter.py  test_cli_adapter.py  test_gemini_api_adapter.py  test_openai_api_adapter.py  test_protocol.py  test_registry.py  test_runner.py  test_sandbox.py
tests/conflict_detector/: __init__.py  test_detector.py  test_import_check.py  test_name_collision_check.py  test_signature_check.py
tests/core/: test_exceptions.py  test_logging.py  test_types.py
tests/git_integration/: __init__.py  test_git.py
tests/lock_manager/: __init__.py  test_concurrency.py  test_deadlock_detector.py  test_lock_table.py  test_rwlock.py
tests/node_store/: __init__.py  test_ingestion.py  test_reconstruction.py  test_roundtrip.py  test_store.py
tests/planner/: test_llm.py  test_planner.py  test_review.py
tests/scheduler/: test_dag.py  test_scheduler.py
