[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-agent-kernel"
version = "0.1.0"
description = "A shared-memory-inspired orchestration kernel for concurrent multi-agent software development."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pytest>=8.2",
    "ruff>=0.5",
    "types-PyYAML>=6.0",
]

[tool.setuptools.packages.find]
include = ["mak*"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["mak", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ANN", "D"]
# D203/D213: conflicting docstring conventions. D107: __init__ is documented by
# the class docstring, not a separate one.
ignore = ["D203", "D213", "D107"]

[tool.ruff.lint.isort]
known-first-party = ["mak"]

[tool.ruff.lint.per-file-ignores]
# Test methods are self-documenting via descriptive names; docstrings not required.
"tests/**" = ["D100", "D101", "D102", "D103", "D104"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
