[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-agent-kernel"
dynamic = ["version"]
description = "A shared-memory-inspired orchestration kernel for concurrent multi-agent software development."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "anthropic>=0.107.1",
    "openai>=2.41.0",
    "google-genai>=2.8.0",
    "prompt_toolkit>=3.0",
    "rich>=13.0",
]

[project.scripts]
mak = "cli.__main__:main"

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pytest>=8.2",
    "ruff>=0.5",
    "types-PyYAML>=6.0",
]

[tool.setuptools.dynamic]
version = {attr = "mak._version.__version__"}

[tool.setuptools.packages.find]
include = ["mak*", "cli*"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true

# Agent SDKs: declared dependencies, but imported lazily inside the adapters (so
# import time stays fast and a missing optional extra never breaks startup).
# anthropic/openai ship usable types; silence any missing-stub edge cases.
[[tool.mypy.overrides]]
module = ["anthropic", "openai"]
ignore_missing_imports = true

# google-genai ships a namespace package whose `genai.Client` mypy cannot always
# resolve; skip following it so the lazy import is treated as untyped either way
# (installed or not), matching the other optional-SDK adapters.
[[tool.mypy.overrides]]
module = ["google", "google.*"]
ignore_missing_imports = true
follow_imports = "skip"

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["mak", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ANN", "D"]
# D203/D213: conflicting docstring conventions. D107: __init__ is documented by
# the class docstring, not a separate one.
ignore = ["D203", "D213", "D107"]

[tool.ruff.lint.isort]
known-first-party = ["mak"]

[tool.ruff.lint.per-file-ignores]
# Test methods are self-documenting via descriptive names; docstrings not
# required. ANN401: test doubles for untyped SDKs mirror their **kwargs surface.
"tests/**" = ["D100", "D101", "D102", "D103", "D104", "ANN401"]
# The API adapters wrap third-party SDKs (anthropic, openai) that ship no type
# stubs; the client and response objects are genuinely dynamic at this boundary,
# so typing.Any is the honest annotation. ANN401 is suppressed only here.
"mak/agent_runner/adapters/anthropic_api_adapter.py" = ["ANN401"]
"mak/agent_runner/adapters/openai_api_adapter.py" = ["ANN401"]
"mak/agent_runner/adapters/gemini_api_adapter.py" = ["ANN401"]
"mak/planner/llm.py" = ["ANN401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
